# marktask

./: Cargo.toml  README.md
.github/workflows/: publish-crate.yaml  rust.yaml
src/: dates.rs  lib.rs  main.rs
tests/: task_tests.rs
tests/data/: task_dates.txt  tasks.txt
